--- a/index-scss/main.css
+++ b/index-scss/main.css
@@ -617,75 +617,6 @@ img {
   color: #5FB4A2;
 }
 
-@media only screen and (min-width: 768px) {
-  /* FOOTER */
-  .site-footer {
-    background-color: #33323d;
-    margin-top: 80px;
-  }
-  .site-footer__nav {
-    padding: 0;
-    margin: 0;
-    text-align: center;
-  }
-  .site-footer__nav-item {
-    list-style: none;
-  }
-  .site-footer__nav-link {
-    text-decoration: none;
-    font-family: 'Public Sans', sans-serif;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 14px;
-    text-align: center;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    color: #FFFFFF;
-    -webkit-transition: color 0.5s ease;
-    transition: color 0.5s ease;
-  }
-  .site-footer__nav-link:hover {
-    color: #fff;
-    opacity: 0.7;
-  }
-  /* .site-footer */
-  .site-footer__content {
-    padding: 56px 0;
-  }
-  .site-footer__content-img {
-    margin-bottom: 40px;
-  }
-  .site-footer__content {
-    text-align: center;
-  }
-  .site-footer__bottom {
-    padding: 0;
-    margin: 0;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    margin-top: 40px;
-  }
-  .site-footer__bottom-item {
-    list-style: none;
-  }
-  .site-footer__bottom-item:not(:first-child) {
-    margin-left: 15px;
-  }
-  .site-footer__bottom-img {
-    fill: #fff;
-    -webkit-transition: fill 0.5s ease;
-    transition: fill 0.5s ease;
-  }
-  .site-footer__bottom-img:hover {
-    fill: #fff;
-    opacity: 0.7;
-  }
-}
-
 /* site-hero */
 .site-hero__content-heading {
   padding: 0;
@@ -1165,6 +1096,124 @@ img {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+  }
+}
+
+/* FOOTER */
+.site-footer {
+  background-color: #33323d;
+  margin-top: 80px;
+}
+
+.site-footer__nav {
+  padding: 0;
+  margin: 0;
+  text-align: center;
+}
+
+.site-footer__nav-item {
+  list-style: none;
+}
+
+.site-footer__nav-link {
+  text-decoration: none;
+  font-family: 'Public Sans', sans-serif;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  text-align: center;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  -webkit-transition: color 0.5s ease;
+  transition: color 0.5s ease;
+}
+
+.site-footer__nav-link:hover {
+  color: #fff;
+  opacity: 0.7;
+}
+
+/* .site-footer */
+.site-footer__content {
+  padding: 56px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.site-footer__content-img {
+  margin-bottom: 40px;
+}
+
+.site-footer__content {
+  text-align: center;
+}
+
+.site-footer__bottom {
+  padding: 0;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 40px;
+}
+
+.site-footer__bottom-item {
+  list-style: none;
+}
+
+.site-footer__bottom-item:not(:first-child) {
+  margin-left: 15px;
+}
+
+.site-footer__bottom-img {
+  fill: #fff;
+  -webkit-transition: fill 0.5s ease;
+  transition: fill 0.5s ease;
+}
+
+.site-footer__bottom-img:hover {
+  fill: #fff;
+  opacity: 0.7;
+}
+
+@media only screen and (min-width: 768px) {
+  /* FOOTER */
+  .site-footer {
+    padding: 28px 0;
+  }
+  .site-footer__content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 0;
+  }
+  .site-footer__content-img {
+    margin: 0;
+  }
+  .site-footer__nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-left: 49px;
+    margin-top: -17px;
+  }
+  .site-footer__nav-item:not(:last-child) {
+    margin-right: 42px;
+  }
+  .site-footer__bottom {
+    margin: 0;
+    margin-left: auto;
   }
 }
 /*# sourceMappingURL=main.css.map */
