--- a/index-scss/block/_form.scss
+++ b/index-scss/block/_form.scss
@@ -14,13 +14,14 @@
   font-size: 40px;
   line-height: 42px;
   letter-spacing: -0.357143px;
+  margin-bottom: 32px;
 }
 
-.contact-me__input {
+.form-wrapper__input {
   margin-bottom: 26px;
 }
 
-.contact-me__label {
+.form-wrapper__label {
   margin-bottom: 8px;
   font-style: normal;
   font-weight: bold;
@@ -30,18 +31,18 @@
   opacity: 0.8;
 }
 
-.contact-me__blank {
+.form-wrapper__blank {
   width: 100%;
   height: 48px;
   padding: 9px 16px;
   border: none;
   background-color: rgba(51, 50, 61, 0.1);
-}
-
-.contact-me__blank::placeholder {
-  font-size: 13px;
-  mix-blend-mode: normal;
-  opacity: 0.4;
+  
+  &::placeholder {
+    font-size: 13px;
+    mix-blend-mode: normal;
+    opacity: 0.4;
+  }
 }
 
 .message {
@@ -52,7 +53,7 @@
   height: 96px;
 }
 
-.contact-me__submit {
+.form-wrapper__submit {
   padding: 16px 30px;
   background-color: #203A4C;
   border: none;
@@ -68,10 +69,18 @@
 
 
 @media only screen and (min-width: 1000px) {
+
   .form-contact{
     display: flex;
     justify-content: space-between;
   }
-
   
+  .form-wrapper{
+    flex-grow: 1;
+    max-width: 625px;
+  }
+
+  .form-contact__heading{
+    margin-right: 192px;
+  }
 }
