--- a/index-scss/main.css
+++ b/index-scss/main.css
@@ -887,7 +887,7 @@ img {
   .features-content__title::before {
     content: '';
     position: absolute;
-    width: 701px;
+    width: 401px;
     height: 1px;
     background-color: #33323D;
     opacity: 0.15;
@@ -1017,13 +1017,14 @@ img {
   font-size: 40px;
   line-height: 42px;
   letter-spacing: -0.357143px;
+  margin-bottom: 32px;
 }
 
-.contact-me__input {
+.form-wrapper__input {
   margin-bottom: 26px;
 }
 
-.contact-me__label {
+.form-wrapper__label {
   margin-bottom: 8px;
   font-style: normal;
   font-weight: bold;
@@ -1033,7 +1034,7 @@ img {
   opacity: 0.8;
 }
 
-.contact-me__blank {
+.form-wrapper__blank {
   width: 100%;
   height: 48px;
   padding: 9px 16px;
@@ -1041,25 +1042,25 @@ img {
   background-color: rgba(51, 50, 61, 0.1);
 }
 
-.contact-me__blank::-webkit-input-placeholder {
+.form-wrapper__blank::-webkit-input-placeholder {
   font-size: 13px;
   mix-blend-mode: normal;
   opacity: 0.4;
 }
 
-.contact-me__blank:-ms-input-placeholder {
+.form-wrapper__blank:-ms-input-placeholder {
   font-size: 13px;
   mix-blend-mode: normal;
   opacity: 0.4;
 }
 
-.contact-me__blank::-ms-input-placeholder {
+.form-wrapper__blank::-ms-input-placeholder {
   font-size: 13px;
   mix-blend-mode: normal;
   opacity: 0.4;
 }
 
-.contact-me__blank::placeholder {
+.form-wrapper__blank::placeholder {
   font-size: 13px;
   mix-blend-mode: normal;
   opacity: 0.4;
@@ -1073,7 +1074,7 @@ img {
   height: 96px;
 }
 
-.contact-me__submit {
+.form-wrapper__submit {
   padding: 16px 30px;
   background-color: #203A4C;
   border: none;
@@ -1096,6 +1097,15 @@ img {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+  }
+  .form-wrapper {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    max-width: 625px;
+  }
+  .form-contact__heading {
+    margin-right: 192px;
   }
 }
 
