add contact qismidagi site-contact qismi togirlandi

--- a/index-scss/block/_form.scss
+++ b/index-scss/block/_form.scss
@@ -67,20 +67,20 @@
   color: #fff;
 }
 
-
 @media only screen and (min-width: 1000px) {
 
-  .form-contact{
+  .form-contact__heading {
+    margin: 0;
+    margin-right: 192px;
+  }
+
+  .form-contact {
     display: flex;
     justify-content: space-between;
   }
   
-  .form-wrapper{
+  .form-wrapper {
     flex-grow: 1;
     max-width: 625px;
-  }
-
-  .form-contact__heading{
-    margin-right: 192px;
   }
 }
