--- a/scss/blocks/_contact-contant.scss
+++ b/scss/blocks/_contact-contant.scss
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 1000px) {
 
-  .site-contact__content {
+  .site-content__content {
     display: flex;
     justify-content: space-between;
     border-top: 1px solid rgba(51, 50, 61, 0.15);
