--- a/scss/blocks/_message.scss
+++ b/scss/blocks/_message.scss
@@ -1,7 +1,7 @@
 /*message*/
 .message {
   padding-top: 12px;
-  font-family: 'Public Sans';
+  font-family: 'Public Sans',sans-serif;
   font-style: normal;
   resize: none;
   height: 96px;
