--- a/scss/blocks/_site-hero-contact.scss
+++ b/scss/blocks/_site-hero-contact.scss
@@ -60,6 +60,10 @@
   .site-content__content {
     display: flex;
     justify-content: space-between;
+    border-top: 1px solid rgba(51, 50, 61, 0.15);
+    border-bottom: 1px solid rgba(51, 50, 61, 0.15);
+    padding-top: 48px;
+    padding-bottom: 48px;
   }
 
   .site-hero__content-text {
