--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -2,10 +2,14 @@
 @import "container";
 @import "site-header";
 @import "sitenav";
-@import "site-hero-contact";
-@import 'about';
+@import "site-hero-content";
+@import 'about-content';
 @import 'features';
+@import "features-content";
 @import 'site-hero';
+@import "hero-content";
 @import 'form';
+@import "form-contact";
+@import "form-wrapper";
 @import "message";
 @import "footer-contact";
