--- a/scss/blocks/_footer-contact.scss
+++ b/scss/blocks/_footer-contact.scss
@@ -1,4 +1,4 @@
-/* FOOTER */
+/* SITE FOOTER */
 
 .site-footer {
   background-color: rgba(51, 50, 61, 1);
@@ -17,7 +17,7 @@
 
 .site-footer__nav-link {
   text-decoration: none;
-  font-family: 'Public Sans', sans-serif;
+  font-family: 'Public Sans', "Arial", sans-serif;
   font-weight: normal;
   font-size: 12px;
   line-height: 14px;
