--- a/scss/blocks/_site-hero.scss
+++ b/scss/blocks/_site-hero.scss
@@ -18,8 +18,7 @@
 .site-hero__content-title {
   margin: 0;
   min-width: 311px;
-  font-family: 'Ibarra Real Nova',
-    sans-serif;
+  font-family: 'Ibarra Real Nova', "Arial", sans-serif;
   font-weight: bold;
   font-size: 40px;
   line-height: 42px;
@@ -50,7 +49,7 @@
 
 .site-hero__item-link {
   text-decoration: none;
-  font-family: 'Public Sans', sans-serif;
+  font-family: 'Public Sans', "Arial", sans-serif;
   font-weight: normal;
   font-size: 12px;
   line-height: 14px;
