--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -18,7 +18,7 @@ body {
   padding: 0;
   margin: 0;
   overflow-x: hidden;
-  font-family:'Public Sans', 'Ibarra Real Nova', "Arial", sans-serif;
+  font-family:'Ibarra Real Nova', "Arial", sans-serif;
   background-color: #fff;
 }
 
