--- a/scss/blocks/_about-content.scss
+++ b/scss/blocks/_about-content.scss
@@ -24,7 +24,7 @@
 
 .about-content__list-title {
   margin: 0;
-  font-family: 'Ibarra Real Nova', sans-serif;
+  font-family: 'Ibarra Real Nova', "Arial", sans-serif;
   letter-spacing: -0.357143px;
   color: #33323D;
   margin-bottom: 28px;
@@ -34,7 +34,7 @@
 
 .about-content__list-text {
   margin: 0;
-  font-family: 'Public Sans', sans-serif;
+  font-family: 'Public Sans', "Arial", sans-serif;
   font-size: 16px;
   line-height: 30px;
   color: #33323D;
@@ -44,7 +44,7 @@
 
 .about-content__list-link {
   display: inline-block;
-  font-family: 'Public Sans', sans-serif;
+  font-family: 'Public Sans', "Arial", sans-serif;
   font-weight: normal;
   font-size: 12px;
   line-height: 14px;
