--- a/scss/blocks/_sitenav.scss
+++ b/scss/blocks/_sitenav.scss
@@ -1,39 +1,38 @@
+.sitenav {
+  display: block;
+  padding: 0;
+  background-color: transparent;
+  position: static;
+  text-align: center;
+  padding: 40px 63px;
+  max-width: 0;
+  min-height: 0;
+  top: 0;
+  left: 0;
+}
 
-  .sitenav {
-    display: block;
-    padding: 0;
-    background-color: transparent;
-    position: static;
-    text-align: center;
-    padding: 40px 63px;
-    max-width: 0;
-    min-height: 0;
-    top: 0;
-    left: 0;
-  }
+.sitenav-list {
+  width: 0;
+  display: flex;
+  white-space: nowrap;
 
-  .sitenav-list {
-    width: 0;
-    display: flex;
-    white-space: nowrap;
-  }
-
-  .sitenav-item:not(:last-child) {
+  &:not(:last-child) {
     margin-bottom: 0;
   }
+}
 
-  .sitenav-link {
-    font-family: 'Public Sans', sans-serif;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 14px;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    color: #33323D;
-    margin-right: 43px;
-    transition: color 0.5s ease;
-  }
+.sitenav-link {
+  font-family: 'Public Sans', "Arial", sans-serif;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #33323D;
+  margin-right: 43px;
+  transition: color 0.5s ease;
 
-  .sitenav-link:hover {
+  &:hover {
     color: #5FB4A2;
   }
+}
